--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -14,6 +14,7 @@
     <version>1.0.0</version>
     <properties>
         <spring.boot.version>2.7.4</spring.boot.version>
+        <lombok.version>1.18.24</lombok.version>
     </properties>
 
 
@@ -31,7 +32,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 </project>
