--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <artifactId>domain</artifactId>
     <version>1.0.0</version>
     <properties>
