--- a/app/pom.xml
+++ b/app/pom.xml
@@ -7,8 +7,9 @@
         <groupId>com.epam.esm</groupId>
         <version>1.0.0</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>war</packaging>
     <artifactId>app</artifactId>
 
     <dependencies>
